.obsidian/snippets/styles.css
.markdown-rendered table td,
.markdown-rendered table th {
  vertical-align: middle !important;
  text-align: center !important;
}

.markdown-rendered table {
  .orange,
  [class='.orange'] {
    background-color: rgb(173, 117, 45) !important;
    color: white !important;
  }
  .yellow,
  [class='.yellow'] {
    background-color: rgb(173, 173, 45) !important;
    color: black !important;
  }
  .green,
  [class='.green'] {
    background-color: rgb(45, 173, 45) !important;
    color: black !important;
  }
  .blue,
  [class='.blue'] {
    background-color: rgb(45, 45, 173) !important;
    color: white !important;
  }
  .left-aligned,
  [class='.left-aligned'] {
    text-align: left !important;
  }
}

